5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1734_2507.log
== TEST (2019-05-11 16:45:21) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi = quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		if(qi >= 8000):
			print("MAXIMO")
		elif(sub = 0):
			print("ZERO")
		quant = int(input("quantidade de pirarucus retirados: "))
			
			
		
		
		
-- ERROR:
File "XXXX", line 4
    if(qi = quant):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:45:46) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		quant = int(input("quantidade de pirarucus retirados: "))
			
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:46:41) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		quant = int(input("quantidade de pirarucus retirados: "))
			
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:56:09) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		quant = int(input("quantidade de pirarucus retirados: "))
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		
			
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:56:20) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		quant = int(input("quantidade de pirarucus retirados: "))
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		
			
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 16:57:47) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		quant = int(input("quantidade de pirarucus retirados: "))
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		
			
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 16:57:49) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
if(qi == quant):
	print("ZERO")
elif(qi > quant):
	t = 0
	while(quant < qi or qi <= 8000):
		qi = qi + qi*(perc/100)
		sub = qi - quant
		quant = int(input("quantidade de pirarucus retirados: "))
		if(qi >= 8000):
			print("MAXIMO")
		if(sub == 0):
			print("ZERO")
		
			
			
		
		
		
-- EXECUTION TIME:
0.209645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2507/main.py", line 11, in <module>
    quant = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:08:31) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
while(sub == 0):
	qi = qi + qi*(perc/100)
	sub = qi - quant
	quant = int(input("quantidade de pirarucus retirados: "))
	
	
	
			
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(sub == 0):
NameError: name 'sub' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:09:20) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
while qi - quant == 0):
	qi = qi + qi*(perc/100)
	quant = int(input("quantidade de pirarucus retirados: "))
	
	
	
			
		
		
		
-- ERROR:
File "XXXX", line 4
    while qi - quant == 0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 17:09:20) 
-- CODE:
qi = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
while qi - quant == 0):
	qi = qi + qi*(perc/100)
	quant = int(input("quantidade de pirarucus retirados: "))
	
	
	
			
		
		
		
-- EXECUTION TIME:
0.194477
-- ERROR:
  File "/home/codebench/codes/1734/2507/main.py", line 4
    while qi - quant == 0):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:03:44) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(0 <= q_inicial <= 8000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	quant = int(input("nova quantidade: "))
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 19:05:15) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(0 <= q_inicial <= 8000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	quant = int(input("nova quantidade: "))
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- EXECUTION TIME:
0.144437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2507/main.py", line 9, in <module>
    quant = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:06:09) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
quant = int(input("quantidade de pirarucus retirados: "))
perc = perc/100
t = 0
while(0 < q_inicial <= 8000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	quant = int(input("nova quantidade: "))
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quant = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:06:50) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
perc = perc/100
t = 0
while(0 < q_inicial <= 8000):
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	quant = int(input("nova quantidade: "))
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    q_inicial = (q_inicial + q_inicial * perc) - quant
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:07:19) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
perc = perc/100
t = 0
while(0 < q_inicial <= 8000):
	quant = int(input("nova quantidade: "))
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 19:07:33) 
-- CODE:
q_inicial = int(input("quantidade inicial: "))
perc = float(input("percentual de crescimento: "))
perc = perc/100
t = 0
while(0 < q_inicial <= 8000):
	quant = int(input("nova quantidade: "))
	q_inicial = (q_inicial + q_inicial * perc) - quant
	t = t + 1
	
if(q_inicial <= 0):
	print("ZERO")
	print(t)
if(q_inicial >= 8000):
	print("MAXIMO")
	print(t)

-- EXECUTION TIME:
0.130215
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
